<resources>
    <string name="app_name">MyDuolingo</string>
    <string name="sifreDec">Sifre giriniz</string>
    <string name="password">Password:</string>
    <string name="Username">Username:</string>
    <string name="UsernameDec">Username Giriniz:</string>
    <string name="login">Login</string>
    <string name="signin">Signin</string>
    <string name="tr">Türkçe</string>
    <string name="eng">English</string>
    <string name="add">add</string>
    <string name="Anlamı" />
    <string name="anlam">Anlamı</string>
    <string name="logout">LogOut</string>
    <string name="go_home">Go Home</string>
    <string name="todo">TODO</string>
</resources>