<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.DictionaryActivity"

    android:orientation="vertical">

    <TextView
        android:id="@+id/recyclerViewEngWordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/eng"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/recyclerViewTrWordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tr"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/recyclerViewMeanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/anlam"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/recyclerViewImg"
        android:layout_width="200dp"
        android:layout_height="165dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />


</LinearLayout>