<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UploadScreenActivity">


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/add_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="One More"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="100sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/engWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="150dp"
            android:hint="@string/eng"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/trWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="230dp"
            android:hint="@string/tr"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="310dp"
            android:hint="@string/anlam"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/getFile"
            android:layout_width="167dp"
            android:layout_height="151dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="380dp"
            android:onClick="selectImage"
            app:srcCompat="@drawable/baseline_add_24" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="400dp"
            android:onClick="uploadBtnClick"
            android:text="@string/add" />

        <Button
            android:id="@+id/goMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="450dp"
            android:onClick="goHome"
            android:text="@string/go_home" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>